# kloi

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.arm  README.md  install.sh
.github/workflows/: changelog.yaml  release.yaml
examples/templating/: README.md  config.star  template.yaml
src/: config.rs  logger.rs  main.rs  stacks.rs
src/cli/: apply.rs  check.rs  completions.rs  delete.rs  mod.rs  show.rs  status.rs  utils.rs
