[package]
name = "kloi"
version = "1.0.2-beta"
edition = "2021"


[dependencies]
aws-config = "1.1.7"
aws-sdk-cloudformation = "1.45.0"
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5.16", features = ["derive"] }
serde = { version = "1.0.209", features = ["derive"] }
aws-types = "1.1.7"
colored = "2.0.0"
regex = "1.7.1"
aws-smithy-http = "0.60.6"
syntect = "5.0.0"
futures = "0.3.28"
reqwest = { version = "0.12.7", features = ["blocking"] }
starlark = "0.12.0"
allocative = "0.3.1"
starlark_derive = "0.12.0"
derive_more = { version = "1", features = ["full"] }
anyhow = "1.0.79"
aws-sdk-s3 = "1.47.0"
aws-smithy-types = "1.1.7"
log = "0.4.21"
env_logger = "0.11.2"
md5 = "0.7.0"
clap_complete = "4.5.24"
handlebars = "6.0.0"
serde_json = "1.0.127"
indicatif = "0.17.8"
aws-sdk-cloudwatch = "1.45.0"
aws-sdk-cloudwatchlogs = "1.44.0"
chrono = "0.4.38"
openssl = { version = "0.10.66", features = ["vendored"] }
tempdir = "0.3.7"
indoc = "2.0.5"
httpmock = "0.7.0"
dialoguer = "0.11.0"
